2003-11-27 Zoran Vasiljevic <zoran@archiware.com>

	* generic/threadCmd.c: fixed mutex release in ThreadSend
	when refusing to send message to foreign thread.
	Also, clear the result of the thread::broadcast since it
	should not return anything to the caller, no matter the
	outcome of the command.

2003-11-27 Zoran Vasiljevic <zoran@archiware.com>

	* generic/threadCmd.c: mark threads created by the package
	to distinguish them from "foreign" threads. We will forbid
	sending messages to those since they will probably never listen.

	* generic/threadSvCmd.c: corrected some typos

	* generic/threadSvListCmd.c: added implementation for the
	"tsv::lset" command

	* generic/threadPoolCmd.c: added optional varname argument
	(last arg) to the tpool::cancel

2003-11-25 Zoran Vasiljevic <zoran@archiware.com>

	* doc/format.tcl: new file with a simple poor man's
	documentation formatter.

	* doc/thread.man
	* doc/tpool.man
	* doc/tsv.man: new doctools source files for building
	the package documentation.

	* Makefile.in: added support for building nroff and html
	files out of doctools sources found in doc directory.

2003-11-18 Zoran Vasiljevic <zoran@archiware.com>

	* generic/threadCmd.c: added implementation of the 
	thread::broadcast command. This one asynchronously 
	sends a script to all known threads, except the caller.

2003-09-03 Zoran Vasiljevic <zoran@archiware.com>

	* generic/tclXkeylist.(c|h): added keyed-list datatype
	implementation borrowed from the TclX package. This is
	now part of the shared variable command set.

	* generic/threadSvCmd.(c|h): modified to support persistent
	shared variables with plugin-architecture for different
	persistent store implementations.

	* generic/threadSvlistCmd.(c|h): modified to reflect added 
	support for persistent shared variables.

	* generic/psGdbm.(c|h): added persistent store wrapper
	for the GNU gdbm package.

	* configure et al: regenerated with autoconf because of